--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,67 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Empêche tout défilement */
+}
+
+#root, .app-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden; /* Assure que le contenu reste fixe */
+}
+
+.footer-menu-container {
+    background-color: #2d2d2d;
+    color: white;
+    padding: 2rem;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: fixed;
+    z-index: 50;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 50;
+    transition: background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
+}
+
+.banner-container {
+    margin-top: 0;
+    transition: margin-top 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 24rem; /* Height of the banner */
+}
+
+.content-container {
+    flex: 1;
+    padding-top: 2rem;
+    overflow: auto; /* Assure que le contenu est défilable à l'intérieur du conteneur */
+}
+
+img, video {
+    max-width: 100%;
+    height: auto;
+}
