--- a/src/index.css
+++ b/src/index.css
@@ -206,4 +206,43 @@ img, video {
     animation: slide-right 1s forwards;
 }
 
+/*animation lien*/
+@keyframes underline-in {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes underline-out {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 0;
+  }
+}
+
+.link-hover-underline {
+  position: relative;
+  display: inline-block;
+}
+
+.link-hover-underline::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: currentColor;
+  transition: width 0.3s ease;
+}
+
+.link-hover-underline:hover::after {
+  width: 100%;
+}
+
 
