--- a/src/index.css
+++ b/src/index.css
@@ -78,73 +78,90 @@ img, video {
     max-width: 100%;
     height: auto;
 }
-/* code des 3 cartes*/
+
 .card {
-    background-size: cover;
-    background-position: center;
-    position: relative;
-    max-width: 350px;
-    height: 360px;
-    border-radius: 5px;
-    padding: 2rem;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 7.5px;
-    transition: transform 0.5s ease;
-    color: white;
-  }
-  
-  .card::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-   
-    opacity: 0.5;
-    transition: opacity 0.3s ease;
-  }
-  
-  .card:hover::after {
-    opacity: 0.25;
-  }
-  
-  .card:hover .details {
-    transform: translateY(0%);
-    transition-delay: 0.5s;
-  }
-  
-  .card:hover {
-    transform: scale(1.1);
-    border-radius: 15px;
-  }
-  
-  .details {
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    transform: translateY(100%);
-    transition: transform 0.5s ease-out;
-  }
-  
-  .cardHeader::after {
-    content: "";
-    width: calc(100% + 1rem);
-    height: 2.5px;
-    transform: translateX(calc(-100% - 1rem));
-    background: aqua;
-    bottom: -5px;
-    left: 0;
-    position: absolute;
-    opacity: 0;
-  }
-  
-  .card:hover .cardHeader::after {
-    transform: translateX(-1rem);
-    transition: transform 0.5s ease-out, opacity 0.5s ease-out;
-    opacity: 1;
-  }
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  max-width: 350px;
+  height: 360px;
+  border-radius: 5px;
+  padding: 2rem;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  gap: 7.5px;
+  transition: transform 0.5s ease;
+  color: white;
+}
+
+.card::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+ 
+  opacity: 0.5;
+  transition: opacity 0.3s ease;
+}
+
+.card:hover::after {
+  opacity: 0.25;
+}
+
+.card:hover .details {
+  transform: translateY(0%);
+  transition-delay: 0.5s;
+}
+
+.card:hover {
+  transform: scale(1.1);
+  border-radius: 15px;
+}
+
+.details {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  transform: translateY(100%);
+  transition: transform 0.5s ease-out;
+}
+
+.details::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(255, 255, 255, 0.8); /* Couleur blanche avec une légère transparence */
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  border-radius: 5px; /* Ajuster selon vos besoins */
+}
+
+.card:hover .details::before {
+  opacity: 1;
+}
+
+.cardHeader::after {
+  content: "";
+  width: calc(100% + 1rem);
+  height: 2.5px;
+  transform: translateX(calc(-100% - 1rem));
+  background: aqua;
+  bottom: -5px;
+  left: 0;
+  position: absolute;
+  opacity: 0;
+}
+
+.card:hover .cardHeader::after {
+  transform: translateX(-1rem);
+  transition: transform 0.5s ease-out, opacity 0.5s ease-out;
+  opacity: 1;
+}
+
   /* code pour articles*/
   .article-content p {
     margin-bottom: 1rem;
