--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ img, video {
   justify-content: flex-end;
   gap: 7.5px;
   transition: transform 0.5s ease;
-  color: white;
+  color: #030233;
 }
 
 .card::after {
@@ -149,7 +149,7 @@ img, video {
   width: calc(100% + 1rem);
   height: 2.5px;
   transform: translateX(calc(-100% - 1rem));
-  background: aqua;
+  background: red;
   bottom: -5px;
   left: 0;
   position: absolute;
@@ -222,8 +222,7 @@ img, video {
 .slide-out {
     animation: slide-right 1s forwards;
 }
-
-/*animation lien*/
+/*code liens*/
 @keyframes underline-in {
   from {
     width: 0;
@@ -254,12 +253,28 @@ img, video {
   bottom: -2px;
   width: 0;
   height: 2px;
-  background-color: currentColor;
+  background-color: red;
   transition: width 0.3s ease;
 }
 
 .link-hover-underline:hover::after {
   width: 100%;
 }
+
+.active-link {
+  position: relative;
+  display: inline-block;
+}
+
+.active-link::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  background-color: red;
+}
+
 
 
