--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,9 @@ html, body {
 }
 
 .footer-menu-container {
-    background-color: #2d2d2d;
-    color: white;
+    background-color: #ffffff;
+    border: solid 1px #e5e5e5;
+    color: #030233;
     padding: 2rem;
     bottom: 0;
     left: 0;
@@ -161,6 +162,7 @@ img, video {
   transition: transform 0.5s ease-out, opacity 0.5s ease-out;
   opacity: 1;
 }
+/*code slide des 3 cartes */
 @layer components {
   .card-enter {
     @apply transform translate-x-full opacity-0;
@@ -283,6 +285,26 @@ img, video {
   width: 100%;
   height: 2px;
   background-color: red;
+}
+
+/*code pour barre de scroll vertical aticles*/
+/* CSS global */
+::-webkit-scrollbar {
+  width: 8px; /* Largeur de la barre de défilement verticale */
+  height: 8px; /* Hauteur de la barre de défilement horizontale */
+}
+
+::-webkit-scrollbar-track {
+  background: transparent; /* Fond de la piste */
+}
+
+::-webkit-scrollbar-thumb {
+  background:#ffffff; /* Couleur du pouce de la barre de défilement */
+  border-radius: 4px; /* Arrondir les coins du pouce */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff; /* Couleur du pouce au survol */
 }
 
 
