--- a/src/index.css
+++ b/src/index.css
@@ -11,20 +11,26 @@
 html, body {
     width: 100%;
     height: 100%;
-    overflow: hidden; /* Empêche tout défilement */
+    overflow-y: auto; /* Permettre le défilement vertical */
+    overflow: hidden; /* Empêche tout défilement la page ne va plus bouger en haut  */
 }
 
 #root, .app-container {
+ 
     width: 100%;
-    height: 100%;
+   height: 100%; 
     display: flex;
     flex-direction: column;
-    overflow: hidden; /* Assure que le contenu reste fixe */
+    overflow: hidden; /* Empêche tout défilement la page ne va plus bouger en haut  */
+   padding-left: 4px;
+    
 }
 
 .main-content {
     flex: 1;
-    overflow-y: auto; /* Permet le défilement vertical à l'intérieur du conteneur principal */
+    overflow-y:auto; /* Permet le défilement vertical à l'intérieur du conteneur principal */
+   
+   
 }
 
 .footer-menu-container {
@@ -57,8 +63,9 @@ html, body {
     right: 0;
     z-index: 50;
     transition: background-color 0.3s ease-in-out, padding 0.3s ease-in-out;
+    width: 100%;
 }
-
+/* code banniere container*/
 .banner-container {
     margin-top: 0;
     transition: margin-top 0.3s ease-in-out;
@@ -199,6 +206,7 @@ img, video {
         transform: translateX(-100%);
     }
 }
+/*code banner img*/
 
 .banner-container {
     position: relative;
@@ -211,6 +219,7 @@ img, video {
     position: absolute;
     top: 0;
     left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background-size: cover;
